--- a/src/css/card.css
+++ b/src/css/card.css
@@ -9,8 +9,10 @@ body {
     align-items: center;
     text-align: center;
     position: relative;
+    min-width: 200px;
+    min-height: 200px;
     width: 80%;
-    height: 200%;
+    height: 70%;
     border: 1px solid black;
     margin: 50px auto;
     margin-left: 5%;
